tests/golden/type_errors/invalid_add.cd
let a = "a";
print a + 1;
